added AI citation

--- a/Practical_Assignment_2.ipynb
+++ b/Practical_Assignment_2.ipynb
@@ -19,7 +19,8 @@
         "\n",
         "- Data is from three months: **2024/02, 2024/03 and 2024/04.**\n",
         "\n",
-        "## <font color=\"red\"> Note: acknowledge and cite GenAI if used <font>"
+        "## <font color=\"red\"> Note: acknowledge and cite GenAI if used <font>\n",
+        "\"DeepSeek AI (Version 1.0, developed by DeepSeek AI, accessed January 10-12, 2025)\" was consulted during the research process."
       ],
       "metadata": {
         "id": "j__1ZiLtX1Ju"
@@ -114,7 +115,7 @@
         "id": "-GoO-QFRVjX0"
       },
       "id": "-GoO-QFRVjX0",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +133,7 @@
         "id": "X4MzX_C0WHiq"
       },
       "id": "X4MzX_C0WHiq",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +157,7 @@
         "outputId": "9bc04bad-0f6b-47b6-d616-d4d6a74345c2"
       },
       "id": "8-sY4iV8XoNK",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +596,7 @@
         "outputId": "f29a565e-69e6-41d0-fc88-29eb65f78c36"
       },
       "id": "y3VxzXhcZn-k",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -730,7 +731,7 @@
         "outputId": "a3027ee3-4180-403a-fcaa-aa8024679b90"
       },
       "id": "SRtAGqpCc_Wj",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,7 +866,7 @@
         "outputId": "18fa9371-0702-463e-9fb1-8625917816a9"
       },
       "id": "UwgJLIMcf9SB",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1293,7 +1294,7 @@
         "outputId": "a0ebb49f-9796-40f5-ad7d-01236e8bfbb9"
       },
       "id": "JGyrEtXZhnuH",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1320,7 +1321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "91178cea",
       "metadata": {
         "id": "91178cea",
@@ -1784,7 +1785,7 @@
         "outputId": "02f02310-46fa-43e8-cdf4-83926c0ff91b"
       },
       "id": "d0I3EqWpi5zI",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1849,7 +1850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "82a937c9",
       "metadata": {
         "id": "82a937c9"
@@ -1892,7 +1893,7 @@
         "outputId": "f3a1be21-4c84-475a-d704-393c6843ac67"
       },
       "id": "LceO3zBEq0-q",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2591,7 +2592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "0217869f",
       "metadata": {
         "id": "0217869f",
@@ -3036,7 +3037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "5fcef27b",
       "metadata": {
         "id": "5fcef27b"
@@ -3083,7 +3084,7 @@
         "id": "kdDUyQIpp5K5"
       },
       "id": "kdDUyQIpp5K5",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3120,7 +3121,7 @@
         "outputId": "e028d0f9-3a7f-4e75-f2e9-fe8c189f0e1a"
       },
       "id": "Ur-h62Scsg2G",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3481,7 +3482,7 @@
         }
       },
       "id": "MJXbli6A4p7B",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3543,7 +3544,7 @@
         }
       },
       "id": "_IjA1wrl5CU3",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3602,7 +3603,7 @@
         }
       },
       "id": "vxGxgIonsEtx",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3646,7 +3647,7 @@
         "outputId": "38c5b44d-273d-4c7e-fb89-e9410b3e975e"
       },
       "id": "g5MhMoHcMjej",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3690,7 +3691,7 @@
         "outputId": "6b8f8e45-70ba-4662-9515-f6c42513da1d"
       },
       "id": "oYO1tLQmMfNn",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3735,7 +3736,7 @@
         "outputId": "23fd5636-56be-4d22-82e7-1cd719ee3bda"
       },
       "id": "lMEymotoMV7r",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3785,7 +3786,7 @@
         "outputId": "f8ed3d9a-60a1-4ce4-b102-61117ba0ad54"
       },
       "id": "qwuuqpnmMU8Z",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3832,7 +3833,7 @@
         }
       },
       "id": "N_M42_V5D_ox",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3876,7 +3877,7 @@
         "outputId": "263e596f-3e7c-4b75-edb6-31c2414386d6"
       },
       "id": "EA6TnNVUMNEW",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3910,7 +3911,7 @@
         }
       },
       "id": "g3rsCrCDGrt_",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
