corrected feature standardization of dummies

--- a/Practical_Assignment_3.ipynb
+++ b/Practical_Assignment_3.ipynb
@@ -13,9 +13,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **DNSC6314 Assignments: Capital Bikeshare**\n",
+        "# **DNSC6314 Assignment 3 by Chipo Jaya: G44454879**\n",
+        "- Feature Information: Bike Data\n",
+        "- This project continues with Capital Bikeshare data from https://ride.capitalbikeshare.com/system-data\n",
         "\n",
-        "## <font color=\"red\"> Note: acknowledge and cite GenAI if used <font>"
+        "- Data is from three months: **2024/02, 2024/03 and 2024/04.**"
       ],
       "metadata": {
         "id": "j__1ZiLtX1Ju"
@@ -60,7 +62,7 @@
         "id": "X4MzX_C0WHiq"
       },
       "id": "X4MzX_C0WHiq",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +79,7 @@
         "outputId": "0ca7a272-effb-4203-e8f9-0764851a0e95"
       },
       "id": "c4387QeZVhRb",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -457,7 +459,7 @@
         "outputId": "0ea1a6d0-de93-441f-f58f-e5e871779238"
       },
       "id": "8-sY4iV8XoNK",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,7 +532,7 @@
         "outputId": "b5015f6d-a307-4d29-db78-e14e396dfef9"
       },
       "id": "y3VxzXhcZn-k",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -665,7 +667,7 @@
         "outputId": "abd92a4d-102b-472f-f31c-073d85425806"
       },
       "id": "SRtAGqpCc_Wj",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -800,7 +802,7 @@
         "outputId": "0dcf6be2-f4c2-427a-80a4-4f44228ffdb3"
       },
       "id": "UwgJLIMcf9SB",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1227,7 +1229,7 @@
         "outputId": "bdf52d2e-6a2e-41d8-d483-1f2a5c4cdddb"
       },
       "id": "JGyrEtXZhnuH",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1254,7 +1256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "91178cea",
       "metadata": {
         "id": "91178cea",
@@ -1713,7 +1715,7 @@
         "outputId": "91b942d0-0f90-4309-ced4-abbe67e53597"
       },
       "id": "d0I3EqWpi5zI",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1775,7 +1777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "82a937c9",
       "metadata": {
         "id": "82a937c9"
@@ -1818,7 +1820,7 @@
         "outputId": "4ee51bef-6f65-4836-a152-1eabc8d842d6"
       },
       "id": "LceO3zBEq0-q",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2468,7 +2470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "3e5059bf",
       "metadata": {
         "id": "3e5059bf",
@@ -2517,7 +2519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "0217869f",
       "metadata": {
         "id": "0217869f",
@@ -2962,7 +2964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "5fcef27b",
       "metadata": {
         "id": "5fcef27b"
@@ -3003,7 +3005,7 @@
         "id": "ztjTPiu_8nuL"
       },
       "id": "ztjTPiu_8nuL",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3033,7 +3035,7 @@
         "id": "47L9tZ3r8Po2"
       },
       "id": "47L9tZ3r8Po2",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3050,17 +3052,22 @@
       "cell_type": "code",
       "source": [
         "# Feature Standardization\n",
-        "import numpy as np\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "\n",
-        "X_train_standardised = StandardScaler().fit_transform(X_train_dummies)\n",
-        "X_test_standardised = StandardScaler().fit_transform(X_test_dummies)"
+        "# Initialize the scaler\n",
+        "scaler = StandardScaler()\n",
+        "\n",
+        "# Fit and transform Training data\n",
+        "X_train = pd.DataFrame(scaler.fit_transform(X_train_dummies), index=X_train_dummies.index, columns=X_train_dummies.columns)\n",
+        "\n",
+        "# Transform testing data\n",
+        "X_test = pd.DataFrame(scaler.transform(X_test_dummies), index=X_test_dummies.index, columns=X_test_dummies.columns)"
       ],
       "metadata": {
         "id": "35kf6CtlItcw"
       },
       "id": "35kf6CtlItcw",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3077,9 +3084,6 @@
       "cell_type": "code",
       "source": [
         "# Lasso Regression\n",
-        "from sklearn.linear_model import Lasso\n",
-        "from sklearn.model_selection import cross_val_score\n",
-        "\n",
         "# initialize the Lasso model\n",
         "model = Lasso(alpha=1)\n",
         "\n",
@@ -3108,7 +3112,7 @@
         "outputId": "f4d3d9d8-0d7e-4aaf-a674-cedd30df8a2c"
       },
       "id": "n_2IKdIdItwG",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3163,7 +3167,7 @@
         "outputId": "03d06242-c84d-4f1e-a00a-69c526adf836"
       },
       "id": "iSbKRbSsIuNA",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3214,7 +3218,7 @@
         "outputId": "c83d8d8f-a6e1-48b5-b350-c7b76eb9d36c"
       },
       "id": "2k7IgrHjIulh",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3239,17 +3243,19 @@
       "cell_type": "code",
       "source": [
         "# Finding best alpha with LassoCV\n",
-        "from sklearn.linear_model import LassoCV\n",
         "\n",
+        "# Defining the LassoCV model with alphas = np.logspace(-4, 2, 50) for 'PU_ct' prediction\n",
         "# initialising the model\n",
-        "model = LassoCV(alphas=np.logspace(-4, 2, 50), cv=5, random_state=0)\n",
+        "lasso = LassoCV(alphas=np.logspace(-4, 2, 50), cv=5, random_state=0)\n",
         "\n",
         "# fitting the model\n",
-        "model.fit(X_train_standardised, y_train['PU_ct'])\n",
+        "lasso.fit(X_train_standardised, y_train['PU_ct'])\n",
         "\n",
         "# finding the best alpha\n",
-        "best_alpha_lassocv = model.alpha_\n",
-        "print(\"Best alpha:\", best_alpha_lassocv)"
+        "print(\"LassoCV: Best hyperparameter alpha:\", lasso.alpha_)\n",
+        "print(\"LassoCV: Best score: \", lasso.score(X_train_standardised, y_train['PU_ct']))\n",
+        "print(\"Validation set performance: \", predict(lasso, X_valid_standardised, y_valid['PU_ct']))\n",
+        "print(\"Training set performance: \", predict(lasso, X_train_standardised, y_train['PU_ct']))"
       ],
       "metadata": {
         "id": "6KraDbmzIvDw",
@@ -3259,7 +3265,7 @@
         "outputId": "db860105-dbaa-4520-bb88-cac6d74c7ec4"
       },
       "id": "6KraDbmzIvDw",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3284,7 +3290,8 @@
       "cell_type": "code",
       "source": [
         "# Printing the coefficients from the Lasso model for 'PU_ct' prediction with the best alpha\n",
-        "lasso_model = Lasso(alpha=best_alpha_lassocv)\n",
+        "lasso_model = Lasso(alpha=lasso.alpha_)\n",
+        "\n",
         "lasso_model.fit(X_train_standardised, y_train['PU_ct'])\n",
         "coefficients = lasso_model.coef_\n",
         "\n",
@@ -3301,7 +3308,7 @@
         "outputId": "4c952582-1fdf-4d01-d339-0f3f8c7d8107"
       },
       "id": "0GTPo9ONIvY1",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3345,7 +3352,7 @@
         "outputId": "885cc0dd-d495-4129-f252-813b167c5780"
       },
       "id": "GnG9g7bFIv0F",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3397,7 +3404,7 @@
         "outputId": "1f806559-70b9-40d0-d92a-eda9b45df4c0"
       },
       "id": "vTkD1jBCIwPT",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3442,7 +3449,7 @@
         "outputId": "b0df4f7a-3ec0-4cb9-e689-c063a2ed0fdb"
       },
       "id": "aJdJBFKEIwnT",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3452,6 +3459,38 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yk0jVutLeFcn"
+      },
+      "id": "yk0jVutLeFcn",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## <font color=\"red\"> Note: acknowledgement of GenAI used <font>\n",
+        "Google Colab AI was consulted during the research process."
+      ],
+      "metadata": {
+        "id": "c82wRI4bd08t"
+      },
+      "id": "c82wRI4bd08t"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DaNn3u8feQdg"
+      },
+      "id": "DaNn3u8feQdg",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
